--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,9 @@
   },
   "plugins": ["@typescript-eslint", "eslint-plugin-import-helpers", "prettier"],
   "rules": {
+    "prettier/prettier": ["error",{
+      "endOfLine": "auto"}
+    ],
     "camelcase": "off",
     "prettier/prettier": "error",
     "import/no-unresolved": "error",
